--- a/css/index.css
+++ b/css/index.css
@@ -418,30 +418,30 @@
 				width: 100vw;
 				height: 104vh;
 				background: rgba(0,0,0,0.4);
-				position: absolute;
+				position: fixed;
 				top: 0;
 				display: none;
 			}
 			.yxkz{
 				width: 75vw;
 				max-width: 530px;
-				height: 40vh;
+				height: 38vh;
 				background-color: white;
 				border-radius: 5px;
 				position: fixed;
 				top: 30%;
 				left: 12.5%;
 			}
-			@media only screen and (max-height: 150vh) {
+			/*@media only screen and (min-height: 105vh) and (max-height:200vh) {
 				.meng{
 					width: 100vw;
 					height: 200vh;
 					background: rgba(0,0,0,0.4);
-					position: absolute;
+					position: fixed;
 					top: 0;
 					display: none;
 				}
-			}
+			}*/
             .yxkz_01{
             	width: 75vw;
 				max-width: 530px;
